--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:text="Screenname"
+        android:layout_marginBottom="8dp"
+        android:text="@string/screenname"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold" />
 
@@ -35,5 +36,17 @@
         android:layout_alignParentStart="false"
         android:layout_alignParentBottom="false"
         android:layout_marginTop="8dp"
-        android:text="Description" />
+        android:text="@string/description"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvDescription"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginTop="8dp"
+        android:text="@string/time_created"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 </RelativeLayout>
