--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,11 +10,11 @@
         android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="8dp"
+        android:layout_toEndOf="@+id/ivProfilePic"
         android:text="@string/screenname"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold" />
@@ -25,6 +25,7 @@
         android:layout_height="300dp"
         android:layout_below="@+id/tvUsername"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -49,4 +50,14 @@
         android:layout_marginTop="8dp"
         android:text="@string/time_created"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+    <ImageView
+        android:id="@+id/ivProfilePic"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="15dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
