--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -46,10 +46,13 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/btnLike"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="8dp"
-        android:text="@string/description" />
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="21dp"
+        android:text="@string/description"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <TextView
         android:id="@+id/tvCreatedAt"
@@ -71,5 +74,27 @@
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         app:menu="@menu/menu_bottom_navigation" />
+
+    <ImageView
+        android:id="@+id/btnLike"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="12dp"
+        app:srcCompat="@drawable/ufi_heart" />
+
+    <TextView
+        android:id="@+id/tvLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/btnLike"
+        android:text="Likes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </RelativeLayout>
