--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,4 +45,14 @@
         android:background="@android:color/holo_green_light"
         android:text="@string/sign_up" />
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="100dp"
+        android:elevation="1dp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
+
 </LinearLayout>
