--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -7,6 +7,17 @@
     android:padding="8dp"
     tools:context=".activity.PostDetailsActivity">
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="168dp"
+        android:elevation="1dp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
+
     <TextView
         android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
