--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -14,6 +14,18 @@
         android:layout_marginBottom="0dp"
         android:padding="8dp" />
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="168dp"
+        android:elevation="1dp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
+
     <ImageView
         android:id="@+id/profilePic"
         android:layout_width="90dp"
