--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ComposeFragment">
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="168dp"
+        android:elevation="1dp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
+
     <EditText
         android:id="@+id/etDescription"
         android:layout_width="match_parent"
@@ -29,7 +40,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/btnSubmit"
