--- a/app/src/main/res/layout/fragment_profile_pic.xml
+++ b/app/src/main/res/layout/fragment_profile_pic.xml
@@ -14,6 +14,17 @@
         android:layout_marginTop="10dp"
         android:text="Take Picture" />
 
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="168dp"
+        android:elevation="1dp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
+
     <ImageView
         android:id="@+id/ivPostImage"
         android:layout_width="match_parent"
