--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -58,10 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnLike"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
         android:text="@string/description"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
@@ -107,5 +106,28 @@
         android:layout_toEndOf="@+id/btnLike"
         android:text="Likes"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+    <ImageView
+        android:id="@+id/btnComment"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@+id/tvLikes"
+        app:srcCompat="@drawable/ufi_comment" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvComments"
+        android:layout_width="403dp"
+        android:layout_height="211dp"
+        android:layout_below="@+id/tvDescription"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="59dp" />
 
 </RelativeLayout>
