--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -71,9 +71,8 @@
         android:layout_above="@+id/imageView"
         android:layout_alignParentTop="false"
         android:layout_alignParentEnd="false"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginBottom="5dp"
         android:layout_toEndOf="@+id/tvUsername"
         android:text="@string/time_created" />
 
@@ -129,5 +128,17 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="59dp" />
+
+    <TextView
+        android:id="@+id/tvAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvCreatedAt"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/ivProfilePic"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textSize="10sp"
+        tools:text="Address" />
 
 </RelativeLayout>
